--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,18 @@
-version: '3.8'
+networks:
+  web:
+    external: true
 
 services:
-  web:
+  fish-web:
     build: .
-    ports:
-      - "8000:8000"
+    networks:
+      - web
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.fish.rule=Host(`fish.tylergilman.com`)"
+      - "traefik.http.routers.fish.entrypoints=websecure"
+      - "traefik.http.routers.fish.tls.certresolver=leresolver"
+      - "traefik.http.services.fish.loadbalancer.server.port=8000"
     environment:
       - LISTEN_ADDR=0.0.0.0:8000
     restart: unless-stopped
