fix content delivery

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,12 @@ services:
       - "traefik.http.routers.fish.entrypoints=websecure"
       - "traefik.http.routers.fish.tls.certresolver=leresolver"
       - "traefik.http.services.fish.loadbalancer.server.port=8000"
+      - "traefik.http.middlewares.securityheaders.headers.sslredirect=true"
+      - "traefik.http.middlewares.securityheaders.headers.stsseconds=31536000"
+      - "traefik.http.routers.fish.middlewares=securityheaders"
     environment:
       - LISTEN_ADDR=0.0.0.0:8000
+      - VIRTUAL_PROTO=https  # Critical for URL generation
     restart: unless-stopped
     volumes:
       - ./:/app
